test/types/range/unbounded/boundedIterOnUnboundedRange.good
(1, 1)
(2, 2)
(3, 3)
boundedIterOnUnboundedRange.chpl:12: error: zippered iterations have non-equal lengths
